# cmake-json-gen-launch-json

./: .gitignore  .gitmodules  Dockerfile  README.md  run_tests.sh  start_docker_dev.sh  to-do.txt
.devcontainer/: devcontainer.json
scripts/: custom_target_properties.cmake  gen_launch_json.cmake  os_host_setup.cmake  python-integration-common.cmake  target_list_opts.cmake  target_list_targets.cmake
scripts/python/: chatgpt_suggestion.py  complete_json_gen_args.py  gen_launch_json.py  generate_launch_json.py  launch.json.template.json  sha1-hash-args.py
scripts/python/validation_schemas/: __init__.py  errors.py  global_template_schema.py
scripts/python/validation_schemas/json_schemas/: README.md  datatypes.json  general_properties.json  language_specific.json  schema_main.json
scripts/python/validation_schemas/json_schemas/prog_languages/cplusplus/: cplusplus-specific.json  cplusplus.json  datatypes.json  hardware_breakpoints.json  linux-specific.json  osx-specific.json  pipe_transport.json  shared_os_properties.json  unix-like.json  windows-specific.json
tests/: CMakeLists.txt  run_tests.cmake  test_gen_launch_json_args.cmake  test_target_list_opts.cmake
tests/json_schema_tests/: global_template.json  target_specific.json
tests/python_tests/: errors.py  ground_truth.json  initializer.py  local_errors.py  main.py  shared_data.py  test.json  test_gen_launch_json.py  test_json_schema.py  test_regen_target_list.py
tests/python_tests/test_helpers/test_gen_launch_json/: README.md  gened_launch.json  get_target_list_hash.sh  global_launch_config_template.json  target_list copy.txt  target_list.txt
tests/python_tests/test_helpers/test_gen_launch_json/target_specific_launch_configs/: dorks.json
tests/python_tests/test_helpers/test_sha1_hash_args/: README.md  gen_sample_output_file.ps1  gen_sample_output_file.sh  generated_target_list_file.txt  ps1_output.txt  raw_sample_target_list copy.txt  raw_sample_target_list.txt  sample_file_name.txt  sample_target_list_with_hash.txt
tests/test_helpers/test_gen_targets_launch_json/: CMakeLists.txt
tests/test_helpers/test_gen_targets_launch_json/custom_targets/hello_world/: CMakeLists.txt
tests/test_helpers/test_target_list_opts/: CMakeLists.txt  expected_target_list.txt
tests/test_helpers/test_target_list_opts/custom_targets/hello_world/: CMakeLists.txt  hello_world.cpp
tests/test_helpers/test_target_list_opts/tests/test_hello_world/: CMakeLists.txt
